Fix issue where sound toggle button overlaps mobile nav toggle button

--- a/src/style/Core/_Mixins.scss
+++ b/src/style/Core/_Mixins.scss
@@ -15,6 +15,12 @@
   }
 }
 
+@mixin tablet {
+  @media (max-width: $tablet-screen-width) {
+    @content
+  }
+}
+
 @mixin desktop {
   @media (min-width: $mobile-screen-width + 1) {
     @content
